--- a/libs/device_agent/CMakeLists.txt
+++ b/libs/device_agent/CMakeLists.txt
@@ -84,6 +84,9 @@ endif ()
 
 find_package(Threads REQUIRED)
 
+set(baseprocessors_DIR "${CMAKE_CURRENT_BINARY_DIR}/../baseprocessors")
+find_package(baseprocessors CONFIG REQUIRED)
+
 set(microservice_DIR "${CMAKE_CURRENT_BINARY_DIR}/../microservice")
 find_package(microservice CONFIG REQUIRED)
 
@@ -108,6 +111,8 @@ target_link_libraries(device_agent
         ${_PROTOBUF_LIBPROTOBUF}
         ${CMAKE_THREAD_LIBS_INIT}
         microservice
+        baseprocessors
+        trtengine
 )
 
 # Here we configure variables specifying the target directories.
