Removing executable from Cmake in `container_agent`: - No main() in container_agent as it should only serve as a library

--- a/libs/container_agent/CMakeLists.txt
+++ b/libs/container_agent/CMakeLists.txt
@@ -120,8 +120,8 @@ target_link_libraries(container_agent
         trtengine
 )
 
-add_executable(ContainerAgent container_agent.cpp)
-target_link_libraries(ContainerAgent container_agent)
+# add_executable(ContainerAgent container_agent.cpp)
+# target_link_libraries(ContainerAgent container_agent)
 
 # Here we configure variables specifying the target directories.
 set(INSTALL_RUNTIME_DIR ${CMAKE_INSTALL_BINDIR})
