--- a/libs/baseprocessors/CMakeLists.txt
+++ b/libs/baseprocessors/CMakeLists.txt
@@ -29,6 +29,7 @@ set(
         HEADER_FILES 
         basepreprocessor.h
         baseprocessor.h
+        basepostprocessor.h
 )
 
 # All source files and private header files go here.
@@ -36,6 +37,7 @@ set(
         SOURCE_FILES
         basepreprocessor.cpp
         baseprocessor.cpp
+        basepostprocessor.cpp
 )
 
 # Here we define the library.
