Using Double queue (CPU+GPU) structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,15 +72,15 @@ else ()
 endif ()
 
 add_subdirectory(libs/misc)
-add_subdirectory(libs/trtengine)
 add_subdirectory(libs/microservice)
-add_subdirectory(libs/baseprocessors)
-add_subdirectory(libs/protobufprotocols)
-add_subdirectory(libs/communicator)
-add_subdirectory(libs/data_source)
-add_subdirectory(libs/yolov5)
-add_subdirectory(libs/container_agent)
-add_subdirectory(libs/device_agent)
+# add_subdirectory(libs/trtengine)
+# add_subdirectory(libs/baseprocessors)
+# add_subdirectory(libs/protobufprotocols)
+# add_subdirectory(libs/communicator)
+# add_subdirectory(libs/container_agent)
+# add_subdirectory(libs/data_source)
+# add_subdirectory(libs/yolov5)
+# add_subdirectory(libs/device_agent)
 
 add_library(PipePlusPlus SHARED
         src/main.cpp)
@@ -98,20 +98,20 @@ target_link_libraries(PipePlusPlus PUBLIC
         ${_GRPC_GRPCPP}
         ${_REFLECTION}
         ${_PROTOBUF_LIBPROTOBUF}
-        trtengine
         microservice
-        baseprocessors
-        communicator
-        data_source
-        yolov5
-        container_agent
-        device_agent)
-
+        # trtengine
+        # baseprocessors
+        # communicator
+        # data_source
+        # yolov5
+        # container_agent
+        # device_agent
+)
 add_executable(run src/main.cpp)
 target_link_libraries(run PipePlusPlus)
 
-add_executable(DeviceAgent libs/device_agent/device_agent.cpp)
-target_link_libraries(DeviceAgent device_agent)
+# add_executable(DeviceAgent libs/device_agent/device_agent.cpp)
+# target_link_libraries(DeviceAgent device_agent)
 
-add_executable(Container_DataSource libs/data_source/data_source.cpp)
-target_link_libraries(Container_DataSource data_source)
+# add_executable(Container_DataSource libs/data_source/data_source.cpp)
+# target_link_libraries(Container_DataSource data_source)
