fix: adapt container_agent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,7 @@ add_subdirectory(libs/microservice)
 # add_subdirectory(libs/baseprocessors)
 add_subdirectory(libs/protobufprotocols)
 add_subdirectory(libs/communicator)
-# add_subdirectory(libs/container_agent)
+add_subdirectory(libs/container_agent)
 # add_subdirectory(libs/data_source)
 # add_subdirectory(libs/yolov5)
 # add_subdirectory(libs/device_agent)
@@ -104,7 +104,7 @@ target_link_libraries(PipePlusPlus PUBLIC
         communicator
         # data_source
         # yolov5
-        # container_agent
+        container_agent
         # device_agent
 )
 add_executable(run src/main.cpp)
