fix: adapt device_agent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,7 @@ add_subdirectory(libs/communicator)
 add_subdirectory(libs/container_agent)
 add_subdirectory(libs/data_source)
 # add_subdirectory(libs/yolov5)
-# add_subdirectory(libs/device_agent)
+add_subdirectory(libs/device_agent)
 
 add_library(PipePlusPlus SHARED
         src/main.cpp)
@@ -105,7 +105,7 @@ target_link_libraries(PipePlusPlus PUBLIC
         data_source
         # yolov5
         container_agent
-        # device_agent
+        device_agent
 )
 add_executable(run src/main.cpp)
 target_link_libraries(run PipePlusPlus)
