Add arcface model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ add_subdirectory(libs/container_agent)
 add_subdirectory(libs/data_source)
 add_subdirectory(libs/yolov5)
 add_subdirectory(libs/retinaface)
+add_subdirectory(libs/arcface)
 add_subdirectory(libs/device_agent)
 
 add_library(PipePlusPlus
@@ -106,6 +107,7 @@ target_link_libraries(PipePlusPlus PUBLIC
         data_source
         yolov5
         retinaface
+        arcface
         container_agent
         device_agent
 )
