--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ face-recognition-cpp-tensorrt/
 face-recognition/
 cmake-test/
 cmake-build-debug/
+cmake-build-default/
+models/
 # files
 
 ## videos
