--- a/libs/baseprocessors/CMakeLists.txt
+++ b/libs/baseprocessors/CMakeLists.txt
@@ -41,7 +41,7 @@ set(
 )
 
 # Here we define the library.
-add_library(baseprocessors
+add_library(baseprocessors SHARED
         ${HEADER_FILES}
         ${SOURCE_FILES})
 
